--- a/THANKS
+++ b/THANKS
@@ -55,6 +55,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Aaron Watkins                        aaron.watkins@oulu.fi
     Christopher Willmer                  cnaw@as.arizona.edu
     Sara Yousefi Taemeh                  s.yousefi.t@gmail.com
+    Johannes Zabl                        johannes.zabl@irap.omp.eu
 
 
 Teams
