Fits program's comment and history may be called multiple times
Until now, the `--comment' and `--history' keywords would only write one
string (their last value) into the FITS file. From this commit, they will
write all values given to them, no matter how many times they are called.

--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,10 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   the given value is smaller than the minimum or larger than the maximum of
   the input dataset's range.
 
+  Fits: The `--comment' and `--history' command may be called multiple
+  times to write multiple COMMENT/HISTORY keywords into the input FITS
+  file.
+
 ** Bug fixes
 
   Many unused result warnings for asprintf in some compilers (bug #52979).
