--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -557,8 +557,9 @@ Gnuastro library
 * Array input output::          Reading and writing images or cubes.
 * Table input output::          Reading and writing table columns.
 * FITS files::                  Working with FITS data.
-* TIFF files::                  Functions for using TIFF files.
-* Text files::                  Functions to work on Text files.
+* TIFF files::                  Reading and writing TIFF files.
+* JPEG files::                  Reading and writing JPEG files.
+* Text files::                  Reading and writing Text files.
 * World Coordinate System::     Dealing with the world coordinate system.
 * Arithmetic on datasets::      Arithmetic operations on a dataset.
 * Tessellation library::        Functions for working on tiles.
@@ -19103,8 +19104,9 @@ documentation will correspond to your installed version.
 * Array input output::          Reading and writing images or cubes.
 * Table input output::          Reading and writing table columns.
 * FITS files::                  Working with FITS data.
-* TIFF files::                  Functions for using TIFF files.
-* Text files::                  Functions to work on Text files.
+* TIFF files::                  Reading and writing TIFF files.
+* JPEG files::                  Reading and writing JPEG files.
+* Text files::                  Reading and writing Text files.
 * World Coordinate System::     Dealing with the world coordinate system.
 * Arithmetic on datasets::      Arithmetic operations on a dataset.
 * Tessellation library::        Functions for working on tiles.
@@ -22061,9 +22063,10 @@ formats, see @ref{Table input output}.
 
 
 
-@node TIFF files, Text files, FITS files, Gnuastro library
-@subsection TIFF files
+@node TIFF files, JPEG files, FITS files, Gnuastro library
+@subsection TIFF files (@file{tiff.h})
 
+@cindex TIFF format
 Outside of astronomy, the TIFF standard is arguably the most commonly used
 format to store high-precision data/images. Unlike FITS however, the TIFF
 standard only supports images (not tables), but like FITS, it has support
@@ -22111,7 +22114,61 @@ directory's image contains multiple channels, the output will be a list
 
 
 
-@node Text files, World Coordinate System, TIFF files, Gnuastro library
+@node JPEG files, Text files, TIFF files, Gnuastro library
+@subsection JPEG files (@file{jpeg.h})
+
+@cindex JPEG format
+The JPEG file format is one of the most common formats for storing and
+transferring images, recognized by almost all image rendering and
+processing programs. In particular, because of its lossy compression
+algorithm, JPEG files can have low volumes, making it used heavily on the
+internet. For more on this file format, and a comparison with others,
+please see @ref{Recognized file formats}.
+
+For scientific purposes, the lossy compression and very limited dymanic
+range (8-bit integers) make JPEG very un-attractive for storing of valuable
+data. However, because of its commonality, it will inevitably be needed in
+some situations. The functions here can be used to read and write JPEG
+images into Gnuastro's @ref{Generic data container}. If the JPEG file has
+more than one color channel, each channel is treated as a separate node in
+a list of datasets (see @ref{List of gal_data_t}).
+
+@deftypefun {int} gal_jpeg_name_is_jpeg (char @code{*name})
+Return @code{1} if @code{name} has a JPEG suffix. This can be used to make
+sure that a given input file is JPEG. See @code{gal_jpeg_suffix_is_jpeg}
+for a list of recognized suffixes.
+@end deftypefun
+
+@deftypefun {int} gal_jpeg_suffix_is_jpeg (char @code{*name})
+Return @code{1} if @code{suffix} is a recognized JPEG suffix. The
+recognized suffixes are @code{.jpg}, @code{.JPG}, @code{.jpeg},
+@code{.JPEG}, @code{.jpe}, @code{.jif}, @code{.jfif} and @code{.jfi}.
+@end deftypefun
+
+@deftypefun {gal_data_t *} gal_jpeg_read (char @code{*filename}, size_t @code{dir}, size_t @code{minmapsize})
+Read the JPEG file @code{filename} and return the contents as
+@code{gal_data_t}. If the directory's image contains multiple channels, the
+output will be a list (see @ref{List of gal_data_t}).
+@end deftypefun
+
+@cindex JPEG compression quality
+@deftypefun {gal_data_t *} gal_jpeg_write (gal_data_t @code{*in}, char @code{*filename}, uint8_t @code{quality}, float @code{widthincm})
+Write the given dataset (@code{in}) into @file{filename} (a JPEG file). If
+@code{in} is a list, then each node in the list will be a color channel,
+therefore there can only be 1, 3 or 4 nodes in the list. If the number of
+nodes is different, then this function will abort the program with a
+message describing the cause. The lossy JPEG compression level can be set
+through @code{quality} which is a value between 0 and 100 (inclusive, 100
+being the best quality). The display width of the JPEG file in units of
+centimeters (to suggest to viewers/users, only a meta-data) can be set
+through @code{widthincm}.
+@end deftypefun
+
+
+
+
+
+@node Text files, World Coordinate System, JPEG files, Gnuastro library
 @subsection Text files (@file{txt.h})
 
 FITS files are the primary data container in astronomy. FITS indeed as many
